# SETR_Assignment1

./: CMakeLists.txt  README.md  README.txt
MyDLL/: CMakeCache.txt  CMakeLists.txt  mydll.c  mydll.h
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  bug.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  globals_type.html  index.html  mydll_8c.html  mydll_8c.js  mydll_8h.html  mydll_8h.js  mydll_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  struct_d_l_l-members.html  struct_d_l_l.html  struct_d_l_l_node-members.html  struct_d_l_l_node.html
docs/html/search/: all_1.js  all_3.js  classes_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js
docs/latex/: annotated.tex  bug.tex  files.tex  mydll_8c.tex  mydll_8h.tex  mydll_8h_source.tex  refman.tex  struct_d_l_l.tex  struct_d_l_l_node.tex
src/: main.c  mydll.c  mydll.h
